# music-recommender

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  example.py  pyproject.toml
.github/workflows/: test-pipeline.yml
development/: dim_red.py  umap_vis.py
recommender/: __init__.py  recommend.py
test/: conftest.py  test_app.py
