[tool.poetry]
name = "music-recommender"
version = "0.1.0"
description = ""
authors = ["Jakob <88966745+kometenmelodie@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "music_recommender"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
scikit-learn = "^1.3.1"
numba = "^0.58.0"
umap-learn = "^0.5.4"
plotly = "^5.17.0"
pandas = "1.5.3"

[tool.ruff]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
line-length = 90
target-version = "py311"

[tool.ruff.isort]
known-first-party = ["recommender"]

[tool.black]
line-length = 90
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
