[tool.poetry]
name = "music-recommender"
version = "0.1.0"
description = "Recommendation system for songs."
authors = ["Jakob <88966745+kometenmelodie@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.3"


[tool.poetry.group.model.dependencies]
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
numba = "^0.58.0"
umap-learn = "^0.5.4"


[tool.poetry.group.app.dependencies]
litestar = {extras = ["standard"], version = "^2.3.2"}
pydantic = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.ruff]
select = [
    "F", # Pyflakes
    "E", # Pycodestyle
    "W",
    "I001", # isort
    "PD", # pandas-vet
    "PT", # flake8-pytest-style
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
]
line-length = 90
target-version = "py311"

[tool.ruff.isort]
known-first-party = ["recommender"]

[tool.pytest.ini_options]
testpaths = ["test"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
